--- a/iOS/Info.plist
+++ b/iOS/Info.plist
@@ -47,6 +47,11 @@
 		<string>Quicksand-SemiBold.ttf</string>
 		<string>Quicksand-Light.ttf</string>
 	</array>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
+	</dict>
 	<key>UISupportedInterfaceOrientations~ipad</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
